# xuggle-xuggler

./: .classpath  .cproject  .cvsignore  .gitignore  .project  AUTHORS  COPYING  ChangeLog  Doxyfile  INSTALL  Jamfile  Makefile  Makefile.am  Makefile.cygwin  Makefile.global.in  Makefile.in  NEWS  README  TODO  Valgrind.suppressions  Version.properties.in  aclocal.m4  build.properties  build.xml  buildhelper.xml  clone.git  config.h.in  configure  configure.ac  create_installer_sh.sh  cross.sh  guess_os.sh  install-build.sh  ivy.xml  ivysettings.xml  javadoc.css  matroska.c  matroska.h  memcheck  muxers.c  (+14 more)
captive/: Makefile.am  Makefile.global.in  Makefile.in  README  aclocal.m4  clone.git  configure  configure.ac  ltmain.sh
captive/ffmpeg/: .Makefile.am.swp  Makefile.am  Makefile.in  clone.git  incarcerate.in  install.sh.in  update.git
captive/ffmpeg/csrc/: configure
captive/ffmpeg/csrc/libavcodec/: avcodec.h
captive/ffmpeg/csrc/libavformat/: utils.c
captive/ffmpeg/patches/: patch_0100_flvdec_addmetadata.txt  patch_0120_flvdec_addmetadatacode_addmetadata.txt  patch_0200_mpegaudio_parser.c_fixleak.txt  patch_0540_flvenc_addspeexencoder.txt  patch_0600_libavformat_utils_c_fixFPEWhenComputingDuration.txt
captive/jni/linux/: jawt_md.h  jni_md.h
captive/libfaac/: Makefile.am  Makefile.in
captive/libfaac/csrc/: Makefile.am  Makefile.in  configure  configure.in
captive/libfaac/csrc/libfaac/: Makefile.in  libfaac.vcproj
captive/libmp3lame/: Makefile.in  README  incarcerate.in
captive/libmp3lame/csrc/: .cvsignore  ChangeLog.header  configure.in
captive/libmp3lame/csrc/ACM/: ACM.cpp  AEncodeProperties.cpp  AEncodeProperties.h  DecodeStream.cpp  main.cpp
captive/libmp3lame/csrc/Dll/: .cvsignore
captive/libmp3lame/csrc/debian/: control
captive/libmp3lame/csrc/dshow/: Property.rc
captive/libmp3lame/csrc/frontend/: get_audio.c  gtkanal.c  main.c  mp3x.c  mp3x_vc8.vcproj  parse.c  portableio.h  rtp.c  timestatus.c
captive/libmp3lame/csrc/include/: Makefile.in  lame.h
captive/libmp3lame/csrc/libmp3lame/: VbrTag.c  encoder.c  fft.c  lame.c  mpglib_interface.c  newmdct.c  psymodel.c  quantize_pvt.h  tables.c  takehiro.c  util.c  vbrquantize.c  version.h
captive/libmp3lame/csrc/misc/: ath.c
captive/libmp3lame/csrc/mpglib/: .cvsignore  layer2.c  layer2.h  layer3.c  tabinit.c
captive/libmp3lame/csrc/test/: CBRABR.op  cvscheck.sh  nores.op
captive/libmp3lame/csrc/vc_solution/: vc9_lame_dshow.vcproj
captive/libogg/: Makefile.in  README  incarcerate.in
captive/liboil/: Makefile.in  incarcerate.in
captive/libopencore-amr/: Makefile.in  incarcerate.in
captive/libopencore-amr/csrc/: Makefile.in  configure  configure.ac
captive/libopencore-amr/csrc/amrnb/: Makefile.alt  Makefile.in  opencore-amrnb.pc.in
captive/libopencore-amr/csrc/amrwb/: Makefile.am  opencore-amrwb.pc.in
captive/libopencore-amr/csrc/opencore/: README
captive/libopencore-amr/csrc/test/: Makefile.alt  Makefile.in  amrwb-dec.cpp
captive/librtmp/: Makefile.in  clone.git  incarcerate.in  update.git
captive/librtmp/csrc/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
captive/libspeex/: Makefile.am  Makefile.in  incarcerate.in
captive/libspeex/csrc/: .configure.ac.swp
captive/libtheora/: Makefile.in  README  incarcerate.in
captive/libtheora/csrc/: CHANGES  aclocal.m4  configure  libtheora.spec  theora.pc.in  theoraenc-uninstalled.pc.in  theoraenc.pc.in
captive/libtheora/csrc/lib/: decode.c
captive/libtiff/: Makefile.in  incarcerate.in
captive/libvo-aacenc/: Makefile.in  incarcerate.in
captive/libvorbis/: Makefile.in  README  incarcerate.in
captive/libvpx/: Makefile.in  clone.git  incarcerate.in  update.git
captive/libx264/: Makefile.in  README  clone.git  incarcerate.in  update.git
captive/libx264/csrc/: .gitignore  Makefile  configure  muxers.h  version.sh  x264.c  x264.h  x264cli.h  x264dll.c
captive/libx264/csrc/common/: bitstream.c  bitstream.h  common.c  common.h  cpu.h  dct.c  dct.h  deblock.c  display-x11.c  display.h  frame.c  frame.h  macroblock.c  macroblock.h  mc.c  mc.h  mvpred.c  osdep.c  osdep.h  pixel.c  pixel.h  predict.h  quant.c  quant.h  rectangle.c  set.c  set.h  threadpool.h  visualize.c  visualize.h  vlc.c
captive/libx264/csrc/doc/: threads.txt
captive/libx264/csrc/encoder/: analyse.c  analyse.h  cabac.c  cavlc.c  encoder.c  macroblock.c  macroblock.h  me.c  me.h  ratecontrol.c  ratecontrol.h  rdo.c  set.c  set.h  slicetype.c
captive/libx264/csrc/extras/: getopt.c
captive/libx264/csrc/filters/: filters.c
captive/libx264/csrc/input/: avs.c  ffms.c  input.c  input.h  lavf.c  thread.c
captive/openssl/: Makefile.am  Makefile.in  incarcerate.in
captive/openssl/csrc/: configure
captive/spandsp/: Makefile.in  README  incarcerate.in
captive/spandsp/csrc/: Makefile.in  aclocal.m4  config-h.in  configure  configure.ac
captive/zlib/: .Makefile.am.swp  Makefile.am  Makefile.in  incarcerate.in
csrc/com/xuggle/: DocumentationMainPage.h  Main.cpp  Makefile.am  Makefile.dependencies.in  Makefile.in  Xuggle.c  Xuggle.h  XuggleWindows.cpp
java/xuggle-xuggler/captive/: COPYING  Makefile.am  Makefile.in  configure.ac
libopencore-amr/csrc/: ChangeLog  Makefile.alt  Makefile.am  aclocal.m4  build_osx.sh
libopencore-amr/csrc/amrnb/: Makefile.am  wrapper.cpp
libopencore-amr/csrc/amrwb/: Makefile.alt  Makefile.in
libopencore-amr/csrc/opencore/: ChangeLog
libopencore-amr/csrc/test/: Makefile.am  amrnb-dec.cpp  amrnb-enc.c  linkboth.c  wav.cpp
librtmp/: Makefile.am  Makefile.in  aclocal.m4  amf.c  config.h.in  configure  configure.ac  incarcerate.in
librtmp/csrc/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  missing  rtmpdump.1
librtmp/csrc/librtmp/: Makefile  amf.c  dh.h
librtmp/csrc/src/: rtmpdump.1.html  rtmpdump.c  rtmpgw.c  rtmpsrv.c  rtmpsuck.c
librtmp/patches/: patch_0000_librtmp_rtmp_h_xugglerMarker.txt
libtheora/csrc/examples/: Makefile.am  Makefile.in  dump_video.c  player_example.c
libtheora/csrc/lib/: Makefile.am  Makefile.in
(+1371 files in other folders)
