ACLOCAL_AMFLAGS=-I m4

lib_LTLIBRARIES = librtmp.la

librtmp_la_LIBADD=

librtmp_la_SOURCES= \
  librtmp/amf.c \
  librtmp/log.c \
  librtmp/rtmp.c \
  librtmp/hashswf.c \
  librtmp/parseurl.c

librtmp_ladir=$(includedir)/librtmp
librtmp_la_HEADERS= \
  librtmp/amf.h \
  librtmp/dhgroups.h \
  librtmp/log.h \
  librtmp/bytes.h \
  librtmp/handshake.h \
  librtmp/rtmp.h \
  librtmp/dh.h \
  librtmp/http.h \
  librtmp/rtmp_sys.h

