dnl Process this file with autoconf to produce a configure script. -*-m4-*-

AC_INIT
AC_CONFIG_SRCDIR([librtmp/rtmp.c])

AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_HEADERS([config.h])

LIBRTMP_MAJOR_VERSION=0
LIBRTMP_MINOR_VERSION=0
LIBRTMP_MICRO_VERSION=9
LIBRTMP_EXTRA_VERSION=xuggle
LIBRTMP_VERSION=
LIBRTMP_VERSION=$LIBRTMP_MAJOR_VERSION.$LIBRTMP_MINOR_VERSION.$LIBRTMP_MICRO_VERSION$LIBRTMP_EXTRA_VERSION

# For automake.
VERSION=$LIBRTMP_VERSION
PACKAGE=librtmp

AC_SUBST(LIBRTMP_VERSION)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
LT_PREREQ([2.2.7a])
LT_INIT([disable-shared disable-fast-install win32-dll])
AM_MAINTAINER_MODE

AC_CANONICAL_HOST

AC_C_BIGENDIAN
AC_C_CONST
AC_C_INLINE
AC_C_RESTRICT

AC_DEFINE_UNQUOTED(LIBRTMP_VERSION, "${LIBRTMP_VERSION}", [Complete version string])
AC_DEFINE_UNQUOTED(LIBRTMP_MAJOR_VERSION, ${LIBRTMP_MAJOR_VERSION}, [Version major])
AC_DEFINE_UNQUOTED(LIBRTMP_MINOR_VERSION, ${LIBRTMP_MINOR_VERSION}, [Version minor])
AC_DEFINE_UNQUOTED(LIBRTMP_MICRO_VERSION, ${LIBRTMP_MICRO_VERSION}, [Version micro])
AC_DEFINE_UNQUOTED(LIBRTMP_EXTRA_VERSION, "${LIBRTMP_EXTRA_VERSION}", [Version extra])

AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)

AC_CONFIG_FILES([
  Makefile
 ])
AC_OUTPUT
