SUBDIRS = amrnb amrwb test

ACLOCAL_AMFLAGS = -I m4

noinst_HEADERS = oscl/oscl_base.h oscl/oscl_mem.h

EXTRA_DIST = LICENSE Makefile.alt build_osx.sh \
             opencore/README opencore/NOTICE opencore/ChangeLog \
             opencore/codecs_v2/audio/gsm_amr/patent_disclaimer.txt \
             opencore/codecs_v2/audio/gsm_amr/common/dec/include \
             opencore/codecs_v2/audio/gsm_amr/common/dec/build \
             opencore/codecs_v2/audio/gsm_amr/common/dec/Android.mk \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/common/Android.mk \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/common/build \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/common/include \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/common/src/*.cpp \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/dec/Android.mk \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/dec/build \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/dec/include \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/dec/src/*.cpp \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/dec/src/*.h \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/enc/Android.mk \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/enc/build \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/enc/include \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/enc/src/*.cpp \
             opencore/codecs_v2/audio/gsm_amr/amr_nb/enc/src/*.h \
             opencore/codecs_v2/audio/gsm_amr/amr_wb/dec/Android.mk \
             opencore/codecs_v2/audio/gsm_amr/amr_wb/dec/build \
             opencore/codecs_v2/audio/gsm_amr/amr_wb/dec/include \
             opencore/codecs_v2/audio/gsm_amr/amr_wb/dec/src/*.cpp \
             opencore/codecs_v2/audio/gsm_amr/amr_wb/dec/src/*.h

